--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^3.0.7",
+    "config": "^3.2.5",
     "express": "^4.17.1",
     "express-validator": "^6.4.0",
     "mongoose": "^5.8.11",
